--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ proxy:
 
   # 访问 free-ss 时所用代理
   free-ss:
-    enable: false
+    enable: ture
     host: 113.12.72.24
     port: 3128
     socks: false
@@ -15,7 +15,7 @@ proxy:
 
 #  因 Heroku 应用 30 分钟没有访问会自动休眠，为防止休眠，系统每 20 分钟访问一次该配置地址
 health:
-  url: https://shadowsocks-share.herokuapp.com/count
+  url: https://xiaoceshi.herokuapp.com/count
   cron: 0 0/20 6-23 * * ?
 
 
